syntax = "proto3";

package downloader;

message FileRequest {
  string name = 1;
}

message FileResponse {
  bytes data = 1;
}

service FileService {
  rpc Download (FileRequest) returns (stream FileResponse);
}
